--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@google/genai": "^1.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "recharts": "^3.1.2",
-    "xlsx": "^0.18.5"
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
